8338468: [TestBug] Convert controls tests to JUnit 5
Reviewed-by: mhanl, lkostyra, arapte